--- a/src/less/panel.less
+++ b/src/less/panel.less
@@ -46,7 +46,8 @@ body > .panel {
 .panel-content {
   line-height: @content-line-height;
   overflow: auto;
-  padding: @content-padding;
+  margin: @content-padding 0;
+  padding: 0 @content-padding;
 }
 
 .panel-footer {
